--- a/content/notes/3d-webgl-first-steps-variables.mdx
+++ b/content/notes/3d-webgl-first-steps-variables.mdx
@@ -36,7 +36,7 @@ function render(now) {
 }
 ```
 
-We measure how much time has passed since the last animation frame and pass that into the **drawScene** function.
+We measure how much time passed since the last animation frame and pass that into the **drawScene** function.
 
 There is a lot going on inside `drawScene`. The bit we're interested in is where we update some state called `cubeRotation` based on the time delta.
 
