Publish WIP zoom of 3D cube

--- a/content/notes/3d-webgl-first-steps-variables.mdx
+++ b/content/notes/3d-webgl-first-steps-variables.mdx
@@ -113,4 +113,24 @@ if (document.getElementById("autoRotation").checked === false) {
 
 <EmbedFrame src="/embeds/3d-web-gl-first-steps-variables/control-spinning-cube/" />
 
+### Control the zoom
+
+Imagining a camera is pointing at our 3D cube. There are at least three ways to achieve a "zoom" effect, relatively speaking:
+
+1. Move the camera closer to the cube
+1. Move the cube closer to the camera
+1. Change the magnification of the camera
+1. Increase the size of the cube
+
+I'm interested in all of these and now I'm walking through the code I've inherited, looking for the variables that corrispond to these effects.
+
+<EmbedFrame src="/embeds/3d-web-gl-first-steps-variables/zoom-spinning-cube/" />
+
+| Vary                 | Variable           | Notes                                                     |
+| :------------------- | :----------------- | :-------------------------------------------------------- |
+| Camera position      | --                 | WIP                                                       |
+| Cube position        | `drawingPositionZ` | is used to set a starting position when drawing the scene |
+| Camera magnification | --                 | WIP                                                       |
+| Cube size            | --                 | WIP                                                       |
+
 <Stub />
