--- a/content/notes/3d-webgl-first-steps-variables.mdx
+++ b/content/notes/3d-webgl-first-steps-variables.mdx
@@ -138,5 +138,5 @@ Next I'll take a look at some libraries (e.g. ThreeJS). I've found [this list](h
 
 1. We re-render the scene every time an animation frame is available and the browser handles it well
 1. It is simple to including variables from HTML inputs in the `drawScene` function
-1. In this code it's easier to find a projection from a given perspective than a "camera".
-   To get a "zoom" effect, we moved the scene relative to the perspective. [WebGL Fundamentals](https://webglfundamentals.org) has a great page about the ["cameras"](https://webglfundamentals.org/webgl/lessons/webgl-3d-camera.html) concept
+1. In this code the easiest way to add a zoom effect was to move the scene closer to the "perspective". Although this won't work in all other scenarios it's an option that works.
+   [WebGL Fundamentals](https://webglfundamentals.org) has a great page about ["cameras"](https://webglfundamentals.org/webgl/lessons/webgl-3d-camera.html) which has more about this topic. 
