Allow adding links to MainImage

--- a/content/notes/test-content.mdx
+++ b/content/notes/test-content.mdx
@@ -4,6 +4,7 @@ date: 2021-04-14
 description: This description should appear in the metadata for this page. This is a test page in the notes section of my website.
 image: ./test-content.jpg
 imageAlt: Still life photography of a painted CD balanced on a potted cactus
+imageLink: /
 title: "Here's an idea: this page will be my test content. I'll include one of everything in here and use it for a very quick smoke-test"
 ---
 
