Improve wording of notes around A-Frame lab x

--- a/content/notes/a-frame-001.mdx
+++ b/content/notes/a-frame-001.mdx
@@ -23,5 +23,5 @@ imageAnchor: "/labs/a-frame-001/"
 
 1. This was built with [A-Frame WebGL library](https://aframe.io/)
 1. It took a couple of days at most. A-Frame is very easy to get started with
-1. There is no "collision physics" so you can run through anything
-1. [The code is here](https://github.com/LL782/laurence-lord/edit/main/static/labs/a-frame-001/index.html) _⚠️ Warning: not very clean_
+1. There is no "collision physics" in here so you can run through anything
+1. [The code is here](https://github.com/LL782/laurence-lord/edit/main/static/labs/a-frame-001/index.html) _⚠️ Warning: quick and dirty code_
