Improve much of the copy on the website

--- a/content/notes/i-am-writing-for-myself.mdx
+++ b/content/notes/i-am-writing-for-myself.mdx
@@ -1,10 +1,39 @@
 ---
 date: 2021-04-06
+updates:
+  - 2021-10-18
 title: I'm writing for myself. It's important when designing communication to know what you want to say, who you want to say it to and how you want them to feel. This isn't that – it's not designer communication – I'm writing for myself
 image: ./i-am-writing-for-myself.jpg
 imageAlt: "An drawing of me drawing, cross-legged"
 ---
 
-**So why write at all?** Clear your head, get your thoughts in line, practice articulation, store some of your thoughts elsewhere (like backup or archive). <a href="https://twoormore.eu/">Jorge</a> called it _external memory_.
+**So why write at all?** Clear your head, get your thoughts in line, practice articulation, store some of your thoughts elsewhere. A friend and ex-colleague, <a href="https://twoormore.eu/">Jorge</a>, called it _external memory_ and I think that makes a lot of sense.
 
-Something about writing has always evoked an audience for me. I imagine people studying my words when I'm not there. So I fantasise that my writing has an audience but I am not _writing for an audience_. I am not putting effort into designing what I want to say, who to, or how I want them to feel. This frees me to write what I want and not worry about success. Time will tell if it has much appeal to others but that's not the primary concern. I remind myself to just relax and write because I want to. There is value in that
+## MVP vs Creative Block
+
+After years of practicing and promoting [Agile](https://en.wikipedia.org/wiki/Agile_software_development) and [Lean](https://en.wikipedia.org/wiki/Lean_software_development) Software Development for other people, I realised I was holding myself back from publishing a website, writing "blog" posts and generally putting my stuff online. I've helped clients overcome exactly this sort of block to "Going live". It can seem like a bigger deal than it really is but there are antidotes.
+
+### MVP Wins!
+
+> It's better to have something live than nothing
+
+I know my reasons to publish any of this:
+
+- put ideas where I can find them later
+- test and check experiemnts on real devices
+- access it from any browser
+- share easily
+
+All of these point require it to be online. None of them require it to be polished.
+
+### Happy ending
+
+I've got a history of demos, POCs and experiments scattered over different parts of the web ([Gist](https://gist.github.com/LL782/), [Codepen](https://codepen.io/LL782/), [Dabblet](https://dabblet.com/user/LL782)) as well as offline machines. These days, I don't have to think about where to put things, I can add them to this site and know where to look for them in future.
+
+Also, since putting my notes online I've found I re-read them and edit them more. Which results in longer running experimentation and trains of thought. I'm less prone to letting new ideas prevent me from finishing previous ones.
+
+## Don't get held back by an imagined audience
+
+Something about writing has always evoked an audience for me. I imagine people studying my words when I'm not there. This makes it quite natural for me to be "user minded", which can be valuable when you know your "users", but in the context of a personal website it can get in the way of writing freely.
+
+By stating here that I am not designing this communication for anyone but myself it frees me to write what I want and not worry. If some of it has appeal to others that's great – but it's not the primary concern. I remind myself to just relax and write because I want to and that helps it to flow.
