Improve on "I am writing for myself"

--- a/content/notes/i-am-writing-for-myself.mdx
+++ b/content/notes/i-am-writing-for-myself.mdx
@@ -28,12 +28,14 @@ All of these point require it to be online. None of them require it to be polish
 
 ### Happy ending
 
-I've got a history of demos, POCs and experiments scattered over different parts of the web ([Gist](https://gist.github.com/LL782/), [Codepen](https://codepen.io/LL782/), [Dabblet](https://dabblet.com/user/LL782)) as well as offline machines. These days, I don't have to think about where to put things, I can add them to this site and know where to look for them in future.
+I've got a history of demos, POCs and experiments scattered over different parts of the web ([Gist](https://gist.github.com/LL782/), [Codepen](https://codepen.io/LL782/), [Dabblet](https://dabblet.com/user/LL782)) and offline. Since taking this "[Ship it](https://books.google.co.uk/books/about/Ship_It.html?id=ka1QAAAAMAAJ&source=kp_book_description&redir_esc=y)" approach I add notes and experiments to this site and know where to look for them in future.
 
-Also, since putting my notes online I've found I re-read them and edit them more. Which results in longer running experimentation and trains of thought. I'm less prone to letting new ideas prevent me from finishing previous ones.
+And added bonus has been that I re-read my notes more, refine them and continue the same train of thought for longer. I'm less prone to letting new incoming ideas divert me from finishing previous ones.
 
-## Don't get held back by an imagined audience
+## Advice: don't get held back by an imagined audience
 
 Something about writing has always evoked an audience for me. I imagine people studying my words when I'm not there. This makes it quite natural for me to be "user minded", which can be valuable when you know your "users", but in the context of a personal website it can get in the way of writing freely.
 
-By stating here that I am not designing this communication for anyone but myself it frees me to write what I want and not worry. If some of it has appeal to others that's great – but it's not the primary concern. I remind myself to just relax and write because I want to and that helps it to flow.
+By stating here – I am not designing this communication for anyone but myself – I free myself to write what I want and not worry about how good it is. If any of it has appeal to others that's a bonus – not the primary concern.
+
+I remind myself to relax and write for myself and that helps it to flow.
