Shorten the note

--- a/content/notes/i-love-pathfinder.mdx
+++ b/content/notes/i-love-pathfinder.mdx
@@ -6,11 +6,11 @@ imageAlt: Rough doodles, smudges and map drawing in black in pen on smooth paper
 title: "I've put some gamemastering tools for Pathfinder online and made them open source. They are still in their infancy"
 ---
 
-I wrote the following announcement in my notepad. I guess I should add a Pathfinder Tools blog
+I wrote the following announcement in my notepad:
 
 <BlockQuote>
 
-I love Pathfinder 1st Edition and build my own tools for gamemastering. They are an eclectic bunch of early interation tools built primarily for myself. I believe in Open Source and hope that in future they will form a useful set of resources that others will benefit from. I'm a creative developer – so happy to iterate, and to have bugs, feature requests and all-sorts shared with me. Your feedback, ideas, suggestions and improvements are most welcome and can drive the development of this toolset forwards. Use GitHub if you can to share your ideas and there's also email.
+I love Pathfinder 1st Edition and build my own tools for gamemastering. They are an eclectic bunch, of early interation tools, built primarily for myself. I believe in Open Source and hope that in future these tools will form a useful set of resources that others will benefit from. I'm a creative developer – so happy to iterate, and to have bugs, feature requests and all-sorts of issues shared with me. Your feedback, ideas, suggestions and improvements are most welcome and can drive the development of this toolset forwards. Use GitHub if you can to share your ideas and there's also email.
 
 </BlockQuote>
 
