Add image link to Pathfinder

--- a/content/notes/i-love-pathfinder.mdx
+++ b/content/notes/i-love-pathfinder.mdx
@@ -3,6 +3,7 @@ date: 2021-07-19
 description: Capturing my thoughts around setting up Pathfinder Tools, a site for storing and sharing my RPG gamemastering tools
 image: ./i-love-pathfinder.jpg
 imageAlt: Rough doodles, smudges and map drawing in black in pen on smooth paper
+imageAnchor: "https://www.pathfindertools.com/"
 title: "I've put some gamemastering tools for Pathfinder online and made them open source. They are still in their infancy"
 ---
 
