--- a/content/notes/i-am-writing-for-myself.mdx
+++ b/content/notes/i-am-writing-for-myself.mdx
@@ -2,16 +2,16 @@
 date: 2021-04-06
 updates:
   - 2021-10-18
-title: I'm writing for myself. It's important when designing communication to know what you want to say, who you want to say it to and how you want them to feel. This isn't that – it's not designer communication – I'm writing for myself
+title: I'm writing for myself. It's important when designing communication to know what you want to say, who you want to say it to and how you want them to feel. This isn't that – it's not designer communication – it's my personal notes
 image: ./i-am-writing-for-myself.jpg
 imageAlt: "An drawing of me drawing, cross-legged"
 ---
 
-**So why write at all?** Clear your head, get your thoughts in line, practice articulation, store some of your thoughts elsewhere. A friend and ex-colleague, <a href="https://twoormore.eu/">Jorge</a>, called it _external memory_ and I think that makes a lot of sense.
+**So why write?** Clear one's head, get your thoughts in line, practice articulation, store some of your thoughts elsewhere. A buddy and ex-colleague <a href="https://twoormore.eu/">Jorge</a> called it _external memory_ and I think that makes a lot of sense.
 
 ## MVP vs Creative Block
 
-After years of practicing and promoting [Agile](https://en.wikipedia.org/wiki/Agile_software_development) and [Lean](https://en.wikipedia.org/wiki/Lean_software_development) Software Development for other people, I realised I was holding myself back from publishing a website, writing "blog" posts and generally putting my stuff online. I've helped clients overcome exactly this sort of block to "Going live". It can seem like a bigger deal than it really is but there are antidotes.
+After years of practicing and promoting [Agile](https://en.wikipedia.org/wiki/Agile_software_development) and [Lean](https://en.wikipedia.org/wiki/Lean_software_development) Software Development on other people's projects, I realised I was holding myself back from publishing a website, writing "blog" posts and generally putting my stuff online. I helped clients overcome exactly this sort of block to "Going live". It can seem like a bigger deal than it really is but there are antidotes.
 
 ### MVP Wins!
 
@@ -28,14 +28,14 @@ All of these point require it to be online. None of them require it to be polish
 
 ### Happy ending
 
-I've got a history of demos, POCs and experiments scattered over different parts of the web ([Gist](https://gist.github.com/LL782/), [Codepen](https://codepen.io/LL782/), [Dabblet](https://dabblet.com/user/LL782)) and offline. Since taking this "[Ship it](https://books.google.co.uk/books/about/Ship_It.html?id=ka1QAAAAMAAJ&source=kp_book_description&redir_esc=y)" approach I add notes and experiments to this site and know where to look for them in future.
+I've got a history of demos, POCs and experiments scattered over different parts of the web ([Gist](https://gist.github.com/LL782/), [Codepen](https://codepen.io/LL782/), [Dabblet](https://dabblet.com/user/LL782)) and even more offline. Since taking this "[Ship it](https://books.google.co.uk/books/about/Ship_It.html?id=ka1QAAAAMAAJ&source=kp_book_description&redir_esc=y)" approach I add notes and experiments to this site and so know where to look for them in future.
 
-And added bonus has been that I re-read my notes more, refine them and continue the same train of thought for longer. I'm less prone to letting new incoming ideas divert me from finishing previous ones.
+This has the added bonus that I re-read my notes more, refine them and continue the same train of thought for longer. I'm less prone to letting new incoming ideas divert me from finishing previous ones.
 
-## Advice: don't get held back by an imagined audience
+## Note to self: don't get held back by an imagined audience
 
 Something about writing has always evoked an audience for me. I imagine people studying my words when I'm not there. This makes it quite natural for me to be "user minded", which can be valuable when you know your "users", but in the context of a personal website it can get in the way of writing freely.
 
-By stating here – I am not designing this communication for anyone but myself – I free myself to write what I want and not worry about how good it is. If any of it has appeal to others that's a bonus – not the primary concern.
+By stating here that I am not designing this communication for anyone but myself, I free myself to write what I want and not worry about how good it is. If any of it has appeal to others that's a bonus – not the primary concern.
 
 I remind myself to relax and write for myself and that helps it to flow.
