Fix typos and clarify the note

--- a/content/notes/mapping-log-1.mdx
+++ b/content/notes/mapping-log-1.mdx
@@ -14,15 +14,15 @@ Funny, I'm structuring these notes with, Done, Doing, To Do. Why not just create
 ## Done
 
 - [x] Created [a Contentful space](https://app.contentful.com/spaces/zy8ufabt1tm0/)
-- [x] Drated [the model for a Map Tile content type](https://app.contentful.com/spaces/zy8ufabt1tm0/content_types/mapTile/fields)
-- [x] Decided to use coordinates of the centre of each tile along with scale and a fixed tile size to pin point each tile. Previously I was using a pair of coordinates to describe the top-left and bottom-right corners of each tile.
+- [x] Drafted [the model for a Map Tile content type](https://app.contentful.com/spaces/zy8ufabt1tm0/content_types/mapTile/fields)
+- [x] Decided to use coordinates of the centre of each tile along with scale and a fixed tile size to pin-point each tile. Previously I was using a pair of coordinates to describe the top-left and bottom-right corners of each tile.
 
   - e.g. before `5140000,5150000x5150000,5160000` and after `5145000,5155000`
   - I now have tile titles like, `e-5145--s-5155--city--topo` or `e-{east}--s-{south}--{scale}--{type}`
 
-- [x] Learned that `assset` content has a `file` field that can be changed, leaving the asset ID, title and description in place
-  - So given a tile's image is redrafted, when contentful has to be updates, then the only place to change is this `file` field
-- [x] Published [a single city scale tile](https://app.contentful.com/spaces/zy8ufabt1tm0/entries/6ciH7fjDaJE1CASvSIuUcy) and [the first few images of town scale tiles](https://app.contentful.com/spaces/zy8ufabt1tm0/assets) that fit within the city tile
+- [x] Learned that in Contentful `asset` content has a `file` field that can be changed, leaving the asset ID, title and description in place
+  - So given a tile's image is redrafted, when contentful has to be updated, then the only place to change is the `file` field
+- [x] Published [a single city scale tile](https://app.contentful.com/spaces/zy8ufabt1tm0/entries/6ciH7fjDaJE1CASvSIuUcy) and [the first few images of town scale tiles](https://app.contentful.com/spaces/zy8ufabt1tm0/assets) that fit within that city tile
 
 ## Doing
 
@@ -32,10 +32,10 @@ Funny, I'm structuring these notes with, Done, Doing, To Do. Why not just create
 
 ## To Do
 
-- [ ] Build a UI that links from the city scale tile down to the 25 town scale tiles
+- [ ] Build a UI that links from the city scale tile down to the 25 town scale tiles laid out in a grid
 - [ ] Write a script that can crop a city scale tile into 25 town scale tiles automagically
   - There's a library called [Jimp](https://www.npmjs.com/package/jimp) that does cropping programmatically
-- [ ] Write another script and put it in a system that uploads the tiles to Contentful and publishes them
+- [ ] Build a system that automagically crops a city tile into town tiles and publishes them on Contentful
 
 > will I/did I add any notes that couldn't have been attached directly to specific issues?
 
