--- a/content/notes/mapping-log-1.mdx
+++ b/content/notes/mapping-log-1.mdx
@@ -39,7 +39,7 @@ Funny, I'm structuring these notes with, Done, Doing, To Do. Why not just create
 
 > will I/did I add any notes that couldn't have been attached directly to specific issues?
 
-Perhaps not but I realise that's not the reason Why I'm not just creating a project in the repo to "log" all of this.
+Perhaps not but I realise that's not the reason why I'm not just creating a project in the repo to "log" all of this.
 
 1. When I started this "notes" section of my website it was to bring things together to one place.
 1. It was much faster to write the above in markdown in a single document than it would have been to do the same in multiple issues of a project (advantages of working alone)
