--- a/content/notes/open-tabs-of-2021-04.mdx
+++ b/content/notes/open-tabs-of-2021-04.mdx
@@ -34,9 +34,9 @@ I have loads of tabs open. I have a few options for what to do with each one:
 
 I want to find some good stuff and decide what to focus on next. However, I already know what I want to do next...
 
-There are <Link to="/notes/on-creating-digital-maps">some really good links about placing 3D assets on a real scale world map</Link> that I want to turn into a personal learning path. So am I wasting time by not getting straight down to that?
+There are <Link to="/notes/on-creating-digital-maps">some really good links about placing 3D assets on a world scale map</Link>. I want to turn those into a personal learning path. 
 
-I don't think so. There's something restful and restorative about tidying up after the previous engagement and something pleasing about preparing for the next focus with a tidy working environment.
+So am I wasting time by not getting straight down to that? I don't think so. There's something restful and restorative about tidying up after the previous engagement, and something pleasing about preparing for the next focus with a tidy working environment.
 
 ### How could it be done differently?
 
@@ -52,6 +52,6 @@ It's all a balance really.
 
 ## Observations while I did this
 
-1. The list at the top is good. Especially deciding what goes where and why.
+1. The list at the top is good. Especially deciding what goes where and why
 1. With the timebox and the finite options I find it easier to close tabs that no longer grip me
-1. The difference between a truely gripping tab and one that has lost it's appeal is easier to spot when you put all the tabs in one big pile like some kind of Marie Kondo clothing sort through
+1. The difference between a truely gripping tab and one that has lost it's appeal is easier to spot when you put all the tabs in one big pile like some kind of Marie Kondo clothing sort-through
