--- a/content/notes/open-tabs-of-2021-04.mdx
+++ b/content/notes/open-tabs-of-2021-04.mdx
@@ -34,9 +34,9 @@ I have loads of tabs open. I have a few options for what to do with each one:
 
 I want to find some good stuff and decide what to focus on next. However, I already know what I want to do next...
 
-There are <Link to="/notes/on-creating-digital-maps">some really good links about placing 3D assets on a world scale map</Link>. I want to turn those into a personal learning path. 
+There are <Link to="/notes/on-creating-digital-maps">some really good links about placing 3D assets on a world scale map</Link>. I want to turn those into a personal learning path. So am I wasting time by not getting straight down to that? 
 
-So am I wasting time by not getting straight down to that? I don't think so. There's something restful and restorative about tidying up after the previous engagement, and something pleasing about preparing for the next focus with a tidy working environment.
+I don't think so. There's something restful and restorative about tidying up after the previous engagement, and something pleasing about preparing for the next focus with a tidy working environment.
 
 ### How could it be done differently?
 
