--- a/content/notes/i-am-writing-for-myself.mdx
+++ b/content/notes/i-am-writing-for-myself.mdx
@@ -17,7 +17,7 @@ After years of practicing and promoting [Agile](https://en.wikipedia.org/wiki/Ag
 
 > It's better to have something live than nothing
 
-I know my reasons to publish any of this:
+I know my reasons to publish:
 
 - put ideas where I can find them later
 - test and check experiemnts on real devices
