--- a/content/notes/i-am-writing-for-myself.mdx
+++ b/content/notes/i-am-writing-for-myself.mdx
@@ -20,7 +20,7 @@ After years of practicing and promoting [Agile](https://en.wikipedia.org/wiki/Ag
 I know my reasons to publish:
 
 - put ideas where I can find them later
-- test and check experiemnts on real devices
+- test experiments on real devices
 - access it from any browser
 - share easily
 
